--- a/src/components/Tabs/style.css
+++ b/src/components/Tabs/style.css
@@ -14,3 +14,22 @@
 .tab-header > a.active{
     border-bottom: 1px solid #83c11f;
 }
+
+.tab-contents .tab-content{
+    display: none;
+}
+
+
+/* target is used to dsiplay the targetted id based div */
+.tab-contents .tab-content:target{
+    display: block;
+}
+
+.tab-contents .tab-content .content-item{
+    width: 120px;
+    height: 120px;
+    background: grey;
+    border-radius: 50%;
+}
+
+
