--- a/src/components/AudioList/style.css
+++ b/src/components/AudioList/style.css
@@ -6,3 +6,10 @@
     bottom: 0;
     background: #000;
 }
+
+.audio-ls-item .audio-img{
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    background: grey;
+}
